# icebeat

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
db/: icebeat.db
db/migrations/: 000001_create_whitelist_table.down.sql  000001_create_whitelist_table.up.sql  000002_create_guilds_table.up.sql
icebeat/: __init__.py  bot.py  cache.py  config.py  cooldown.py  lavalink.py  logger.py  model.py  notify.py  player.py  storage.py  store.py  treesync.py  ui.py  voice.py
icebeat/cogs/: __init__.py  music.py  owner.py
