[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "icebeat"
version = "1.0.0"
requires-python = ">= 3.8"
description = "Discord music bot."
authors = [{ name = "Francisco Braço-Forte", email = "f.s.f.b2001@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "discord.py[voice]==2.5.2",
  "lavalink==5.9.0",
  "cachetools==6.1.0",
  "aiosqlite==0.21.0",
  "colorlog==6.9.0",
]
keywords = ["discord", "bot", "music"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/franciscosbf/icebeat.git"

[project.scripts]
icebeat = "icebeat:main"
